// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RebootButton/> Render modal. 1`] = `
<div>
  <div
    id="modal-container"
  >
    <div
      aria-labelledby="modal-title"
      aria-modal="true"
      class="modal fade show"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h1
              class="modal-title fs-5"
            >
              Warning!
            </h1>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <p>
              Are you sure you want to restart the router?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-danger d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Confirm reboot
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-danger d-inline-flex justify-content-center align-items-center"
    type="button"
  >
    <span>
      Reboot
    </span>
  </button>
</div>
`;

exports[`<RebootButton/> Render. 1`] = `
<div>
  <div
    id="modal-container"
  />
  <button
    class="btn btn-danger d-inline-flex justify-content-center align-items-center"
    type="button"
  >
    <span>
      Reboot
    </span>
  </button>
</div>
`;
